assets/stylesheets/modules/_sidebar-menu.scss
.sidebar {
  height: 100%;
  position: fixed;
  right: -40vw;
  opacity: 0;
  top: 0;
  transition: 0.6s $ease 0.1s;
  width: 40%;

  body.pace-done & {
    opacity: 1;
    right: 0;
  }
}


//add backgrounds for menu items
@for $i from 1 through 6 {
  .menu__item__bg {
    .menu__item:nth-child(#{$i}) & {
      background: url("../img/#{$i}.png") no-repeat top left;
      background-size: 150%;
    }
  }
}


.menu {
  padding: 0;
  background: #1c1d22;
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  position: relative;


  .menu__item {
    height: calc(100vh / 6);
    position: relative;
    transition: all 0.45s ease-out;
    top: 0;

    .menu__item__bg {
      height: 100%;
      position: absolute;
      transition: 0.3s $ease;
      width: 100%;
      z-index: 1;
    }

    .menu__item__label {
      align-items: center;
      border-bottom: 1px solid #3c1c82;
      color: #9999af;
      cursor: pointer;
      display: flex;
      font-size: 13px;
      height: 100%;
      justify-content: center;
      letter-spacing: 3px;
      margin: 0px;
      position: relative;
      text-transform: uppercase;
      width: 100%;
      z-index: 3;

      span {
        background: linear-gradient(45deg, #ff52e1, #1fcbff);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        transition: 0.3s $ease 0.15s;
      }
    }

    &::before, &::after {
      background: #1c1d22;
      content: '';
      height: 52%;
      position: absolute;
      transition: 0.3s $ease;
      width: 100%;
      z-index: 2
    }

    &::before {
      top: 0;
    }

    &::after {
      bottom: 0;
    }
  }

  //HOVERING/CLICKING MENU ITEM
  .menu__item:hover,
  .menu__item.opened {

    .menu__item__bg {
      background-size: 100%;
     //background-position-x: 0%;
    }

    .menu__item__label span {
      opacity: 0;
      transition: 0.1s $ease;
    }

    &::before, &::after {
      height: 0%;
    }
  }


  .menu__item.opened {
    pointer-events: none;
    height: 100vh;

    &::before {
      top: -300px;
    }

    &::after {
      bottom: -300px;
    }

    .menu__item__bg {
      transition: 0.45s ease-out;
      background-size: cover;
      // background-position-x: 0%;
      //background-position-x: -33vw;
    }

    &,
    &::before,
    &::after,
    .menu__item__bg,
    .menu__item__label span {
      transition-delay: 0.2s;
    }
  }
}

//SETTING TOP'S ON MENU ITEMS
// .menu__item:nth-child(1) {
//   top: 0
// }

// .menu__item:nth-child(2) {
//   top: 100px
// }

// .menu__item:nth-child(3) {
//   top: 200px
// }

// .menu__item:nth-child(4) {
//   top: 300px
// }

// .menu__item:nth-child(5) {
//   top: 400px
// }

// .menu__item:nth-child(6) {
//   top: 500px
// }

// .menu__item:nth-child(7) {
//   top: 600px
// }



.close-btn {
    background: none;
    border: none;
    color: #5000ff;
    font-family: $san-serif;
    font-size: 25px;
    font-weight: 700;
    left: 30px;
    opacity: 0;
    position: fixed;
    top: 50px;
    z-index: 2;

  &::before, &::after {
    content: '';
    position: absolute;
    width: 30px;
    height: 0px;
    z-index: -1;
    opacity: 0.5;
  }

  &::before {
    background-color: #faa6ff;
    left: -10%;
    top: 35%;
  }

  &::after {
    background-color: #62dbff;
    right: -11%;
    top: -10%;
  }

  body.active & {
    opacity: 1;
    transition: opacity 0.55s 0.6s, color 0.3s;

    &::before, &::after {
      transition: height 0.3s $ease 1.05s, top 0.3s, background-color 0.3s;
      height: 25px
    }
  }

  &:hover, &:focus {
    color: white;
    outline: none;

    &::before, &::after {
      top: 15%;
      background-color: #5000ff;
      opacity: 1;
    }
  }
}

.move-up {
  top: -100vh !important;
  transition-delay: 0.2s !important;
}

